Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Description
LU-14296 lnet: use an unbound cred in kiblnd_resolve_addr()
Unfortunately NULL is not a valid argument to prepare_kernel_cred() as of v6.1-rc1-12-g5a17f040fa33
Old: prepare_kernel_cred()
struct cred *prepare_kernel_cred(struct task_struct *daemon)
{
...
if (daemon)
old = get_task_cred(daemon);
else
old = get_cred(&init_cred);
...
Old:
cred = prepare_kernel_cred(NULL);
New:
cred = prepare_kernel_cred(&init_task);
Where the new convention is provides the same result for all lustre client kernels (2.6.28 and newer)